@@ -1,3 +1,8 @@
+2011-10-11 Borut Razem <borut.razem AT gmail.com>
+
+	* local/cf-x86-x86_64-w64-mingw32.mk, local/derna-i586-mingw32msvc.mk:
+	  turn on -O2 optimization for mingw* builds
+
 2011-10-05 Philipp Klaus Krause <pkk@spth.de>
 
 	* lib/variables.mk:
